# video_service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.py
service/: settings.py  urls.py
service/handlers/: base.py
service/models/: __init__.py  chunks.py  models.py  videos.py
service/services/: video.py
service/video/: playlist.py  playlist_creator.py  utils.py  video_cutter.py
